fdo#82006 RTF filter: import \sbauto and \saauto

(cherry picked from commit bb77fd64f9219f1b8f990f5041d81cfddd021213)

Conflicts:
	sw/qa/extras/rtfexport/rtfexport.cxx

Change-Id: Iabff543c8191fc86dceb9274ea1552f60d73dabd
Reviewed-on: https://gerrit.libreoffice.org/13054
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>